[gd_scene load_steps=6 format=3 uid="uid://wfnqhd3r5fxx"]

[ext_resource type="StyleBox" uid="uid://tunkcckfrswo" path="res://papperthings/box/box5.tres" id="1_hwf1r"]
[ext_resource type="Script" uid="uid://7gx01op71qhq" path="res://papperthings/box/box.gd" id="1_p41sv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ryaet"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wcjw6"]

[sub_resource type="GDScript" id="GDScript_p41sv"]
script/source = "extends ReferenceRect

@onready var v_box_container = $\"../MarginContainer/VBoxContainer\"
func _process(delta: float) -> void:
	size = v_box_container.size
	global_position = v_box_container.global_position
"

[node name="base" type="PanelContainer"]
texture_filter = 1
custom_minimum_size = Vector2(174, 63)
offset_right = 174.0
offset_bottom = 109.0
focus_mode = 2
theme_override_styles/panel = ExtResource("1_hwf1r")
script = ExtResource("1_p41sv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -12
theme_override_constants/margin_top = -12
theme_override_constants/margin_right = -12
theme_override_constants/margin_bottom = -12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
texture_filter = 2
layout_mode = 2
mouse_filter = 2

[node name="LineEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(150, 39)
layout_mode = 2
focus_neighbor_bottom = NodePath("../TextEdit")
mouse_filter = 1
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ryaet")
placeholder_text = "title"
context_menu_enabled = false
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
focus_neighbor_top = NodePath("../LineEdit")
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_wcjw6")
placeholder_text = "gibberish"
context_menu_enabled = false
scroll_fit_content_height = true
scroll_fit_content_width = true
caret_blink = true

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Button_scale_LE" type="Button" parent="MarginContainer/Control"]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 1.0
offset_right = 18.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 10

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 2
mouse_filter = 2
border_width = 1.6
editor_only = false
script = SubResource("GDScript_p41sv")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/LineEdit" to="." method="update_vbc_and_panel_size"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="update_vbc_and_panel_size"]
[connection signal="button_down" from="MarginContainer/Control/Button_scale_LE" to="." method="_on_button_scale_le_down"]
[connection signal="button_up" from="MarginContainer/Control/Button_scale_LE" to="." method="_on_button_scale_le_up"]
